started method setup

--- a/src/stubs/function-template.tmpl
+++ b/src/stubs/function-template.tmpl
@@ -3,7 +3,7 @@
     *
     * @return ${returns}
     */
-    public function ${function}()
+    ${access}${static} function ${function}()
     {
-        return ${output}
+        ${return}${output}
     }
