--- a/src/stubs/model-template.tmpl
+++ b/src/stubs/model-template.tmpl
@@ -9,8 +9,9 @@ ${description}
 ${properties}
 */
 
-abstract class ${class} extends \Eloquent
+abstract class ${class} extends ${extends}
 {
+${uses}
 ${constants}
 ${attributes}
 ${functions}
