--- a/src/stubs/function-template.tmpl
+++ b/src/stubs/function-template.tmpl
@@ -3,7 +3,7 @@
     *
     * @return ${returns}
     */
-    ${access}${static} function ${function}()
+    ${access}${static} function ${name}()
     {
-        ${return}${output}
+        ${run}${return}${output}
     }
