1: PostgreSQL integrated 2: Setup of abstract base tables done

--- a/src/stubs/model-template.tmpl
+++ b/src/stubs/model-template.tmpl
@@ -9,7 +9,7 @@ ${description}
 ${properties}
 */
 
-abstract class ${class} extends ${extends}
+${abstract}class ${class} extends ${extends}
 {
 ${uses}
 ${constants}
