--- a/src/stubs/model-template.tmpl
+++ b/src/stubs/model-template.tmpl
@@ -5,8 +5,7 @@ namespace ${namespace};
 ${imports}
 
 /**
-${description}
-${properties}
+${description}${properties}
 */
 ${abstract}class ${class} extends ${extends}
 {
