attribute with NULL default value accommodated Morph based on multiple DBs

--- a/src/stubs/morph-map.tmpl
+++ b/src/stubs/morph-map.tmpl
@@ -14,7 +14,7 @@ namespace ${namespace};
  * Relation::morphMap(array_merge(${namespace}\RelationMorphMap::getMaps(),[...],[...],...));
  *
  */
-class RelationMorphMap
+class ${class}
 {
     public static function getMaps()
     {
